[package]
name = "discarded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
convert_case = "0.6.0"
maplit = "1.0.2"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"
roman = "0.1.6"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
whoami = "1.5.2"
